Fixed small gap for improved visibility on mobile

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-top: 6rem;
+  padding-top: 5rem;
 }
 
 .message {
